--- a/dev.qmd
+++ b/dev.qmd
@@ -12,23 +12,31 @@ La mise en package a été réalisée selon la méthode du _golden master_, où 
 
 La mise en package s'est accompagnée de la rédaction d'une documentation technique et d'un refactoring des paramètres d'entrée des fonctions.
 
-![Un exemple de données en entrée (gauche) et en sortie (droite) du modèle. Les valeurs hétérogènes sont utilisée pour estimer les stock sur l'ensemble du tarritoire.](media/fishmap.png){#fig-fishmap width=70%}
+![Un exemple de données en entrée (gauche) et en sortie (droite) du modèle. Les valeurs hétérogènes sont utilisée pour estimer les stock sur l'ensemble du territoire.](media/fishmap.png){#fig-fishmap width=70%}
 
-<span class="vert">**Résultat:** voila voila.</span>
+<span class="vert">**Résultat:** Le package {fishmap} est disponible en open-source. Il est testé, documenté, et s'accompagne d'un manuel d'utilisation et d'un jeu de donnée test pour une prise en main rapide.</span>
 
 <i class="bi bi-link-45deg pink"></i> [Lien GitHub](https://github.com/balglave/FishMap)
 
 ## Application pour le suivi d'étude sensométrique
 
-![Un exemple de données en entrée (gauche) et en sortie (droite) du modèle. Les valeurs hétérogènes sont utilisée pour estimer les stock sur l'ensemble du tarritoire.](media/shinyapp.png){#fig-shiny width=70%}
+Ce projet a pour objectif d'améliorer une application Shiny d'analyse sensométrique. Ce travail a consisté à refactoriser le code existant et fluidifier l'interface utilisateur.
+
+L'application se base sur un requêtage SQL de la base de données pour proposer à l'utilisateur un choix de produit à selectionner. Une ANOVA est ensuite réalisé et retransmise sous forme de rapport téléchargeable.
+
+Ce rapport contient les résultats sous forme de graphiques et de tableaux (ACP, boxplot, heatmap), résumant la capacité à discriminer les produits pour le panel dans son ensemble et pour chaque paneliste.
+
+<span class="vert">**Résultat:** L'utilisation de la nouvelle version de l'application a nettement reduit le temps dédié à la construction du rapport statistiques, l'expérience utilisateur est fluidifiée tout en enrichissant le contenu graphique de l'application.</span>
+
+![Schéma de fonctionnement de l'application, avec un exemple de graphique de sortie (PCA loadings).](media/shinyapp.png){#fig-shiny width=70%}
 
 ## Développement d'un package de présentation quarto
 
-En tant que formatrice R, il m'a été nécessaire de développer du contenu pédagogique pour mes formations au format quarto. Ce format permet de créer des présentations au format revealjs/html, mais uniquement à partir d'un seul fichier source.
+En tant que formatrice R, il m'a été nécessaire de développer du contenu pédagogique pour mes formations. Le format _quarto_ permet de créer des présentations en revealjs/html, mais uniquement à partir d'un seul fichier source.
 
-Comme les cours sont rédiger chapitre par chapitre, il m'a fallu développer le package [{squash}](https://github.com/ThinkR-open/squash), permettant de générer une présentation à partir de plusieurs fichiers source.
+Comme les cours sont rédiger chapitre par chapitre, j'ai développé le package [{squash}](https://github.com/ThinkR-open/squash), permettant de générer une présentation à partir de plusieurs fichiers source.
 
-J'ai rédigé sa docuentation dans le but qu'il soit accessible à tout utilisateur de R. Pour les développeurs avancés, il est possible de personnaliser le résultat via l'ajout d'extensions et de paramètres d'entrée optionnels.
+J'ai rédigé sa documentation dans le but qu'il soit accessible à tout utilisateur de R. Pour les développeurs avancés, il est possible de personnaliser le résultat via l'ajout d'extensions et de paramètres d'entrée optionnels.
 
 ![Le shéma d'action  du package: à partir de plusieurs fichiers quarto indépendants, on crée une seule présentation html regroupant l'ensemble du contenu original.](media/squash.png){#fig-squash width=90%}
 
