--- a/index.qmd
+++ b/index.qmd
@@ -6,9 +6,9 @@ Vous êtes sur la page d'accueil de mon site personnel. Ici, vous trouverez des 
 
 ### Qui suis-je
 
-Je m'appelle Swann, je suis bioinformaticienne de formation et je m'intéresse aux domaines des statistiques, de la biologie et de l'informatique. J'ai un parcours académique, avec un doctorat et un postdoc en bioinformatique (voir [mes projets de recherches](recherche.qmd)).
+Je m'appelle Swann, je suis bioinformaticienne de formation et je m'intéresse aux domaines des statistiques, de la biologie et de l'informatique. J'ai un parcours académique, avec un doctorat et un postdoctorat en bioinformatique (voir [mes projets de recherches](recherche.qmd)).
 
-J'ai également travaillé comme consultante et formatrice R chez ThinkR, où j'ai affiné ma connaissance de R et mes pratiques de développement. J'ai eu l'occasion de travailler sur des projets variés, allant de la mise en package d'outils statistiques à la création d'applications Shiny (voir [mes projets R](dev.qmd)).
+J'ai également travaillé comme consultante et formatrice R chez ThinkR, où j'ai affiné ma connaissance de R et mes pratiques de développement (voir [mes projets R](dev.qmd)).
 
 ![](media/timeline.png){width=80% fig-align="center"}
 
@@ -16,6 +16,6 @@ J'ai également travaillé comme consultante et formatrice R chez ThinkR, où j'
 
 <i class="bi bi-terminal-fill pink"></i> R, Python, SQL, bash
 
-<i class="bi bi-github pink"></i> Git, GitLab, GitHub, Docker
+<i class="bi bi-github pink"></i> Git, GitHub, GitHub Actions, Docker
 
-<i class="bi bi-file-earmark-code-fill pink"></i> Rmarkdown, Quarto, SCSS, LaTeX
+<i class="bi bi-file-earmark-code-fill pink"></i> Rmarkdown, Quarto, LaTeX
