--- a/publi.qmd
+++ b/publi.qmd
@@ -42,8 +42,8 @@ Cette application shiny permet de construire une regex depuis un module de séle
 
 <i class="bi bi-share-fill pink"></i> Application déployée avec [ShinyLive](https://dagousket.github.io/lurex/)
 
-<span class="ref">{millefeuille}: un package python pour les coordonnées génomique</span>
+<span class="ref">{millefeuille}: un package python pour les coordonnées génomiques</span>
 
-Ce package en cours de développment permet de manipuler des données génomiques et convertir certains format entre eux (bed6, bed12, gff). Il est écrit en python, et possède une architecture de test unitaire fonctionelle.
+Ce package en cours de développment permet de manipuler des données génomiques et convertir certains formats entre eux (bed6, bed12, gff). Il est écrit en python, et possède une architecture de test unitaire complète.
 
 <i class="bi bi-link-45deg pink"></i> Code sur [GitHub](https://github.com/dagousket/millefeuille)
